<resources>
    <string name="app_name">EllersProject</string>
    <string name="home1">home1</string>
    <string name="home2">home2</string>
    <string name="change"><u>Change</u></string>
    <string name="red">RED</string>
    <string name="blue">Blue</string>
    <string name="next">next</string>
    <string name="username">Username</string>
    <string name="log_in">log in</string>
    <string name="forgot_your_username_password"><u>Forgot your username/password?</u></string>
    <string name="create_acount">create acount</string>
    <string name="bober">http://3.bp.blogspot.com/-oVx_Nta8L2s/Vki1hfH6oDI/AAAAAAAACfo/WmEFTCQrv3U/s1600/Daggett.jpg</string>
    <string name="load">load</string>
    <string name="home3">home3</string>
    <string name="home4">home4</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="diagramma">diagramma</string>
    <string name="home6">HOME6</string>
    <string name="home5">HOME5</string>
    <string name="home7">Home7</string>
    <string name="firstname">First name</string>
    <string name="surname">surname</string>
    <string name="age">age</string>
    <string name="isdegree">isDegree</string>
    <string name="photografy_address">photo url</string>
    <string name="save_data">Save data</string>
    <string name="filter">Add student</string>
    <string name="id">ID</string>
    <string name="filter1">filter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home8">home8</string>
    <string name="home9">home9</string>
</resources>
