<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/home1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:onClick="toHome"
            android:text="@string/home1" />

        <Button
            android:id="@+id/home2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:onClick="toHome"
            android:text="@string/home2" />

        <Button
            android:id="@+id/home3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:onClick="toHome"
            android:text="@string/home3" />
        <Button
            android:id="@+id/home4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:onClick="toHome"
            android:text="@string/home4" />
        <Button
            android:id="@+id/home5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:onClick="toHome"
            android:text="@string/home5" />
        <Button
            android:id="@+id/home6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:onClick="toHome"
            android:text="@string/home6" />
        <Button
            android:id="@+id/home7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:onClick="toHome"
            android:text="@string/home7" />

    </LinearLayout>

</FrameLayout>