<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".homeworks.homework7.Home7EditActivity">

    <ImageView
        android:id="@+id/ivHome7photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="TODO"
        android:src="@drawable/sova_anmation_3"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5" />

    <EditText
        android:id="@+id/etHome7photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/photografy_address"
        android:inputType="text"
        style="@style/Home7text"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintTop_toBottomOf="@id/ivHome7photo"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5" />
    <EditText
        android:id="@+id/etHome7StudentID"
        style="@style/Home7text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/id"
        android:inputType="numberDecimal"
        android:textColorHighlight="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5" />

    <EditText
        android:id="@+id/etHome7FirstName"
        style="@style/Home7text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/firstname"
        android:inputType="text"
        android:textColorHighlight="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etHome7StudentID"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5" />

    <EditText
        android:id="@+id/etHome7SurName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/surname"
        android:inputType="text"
        style="@style/Home7text"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etHome7FirstName"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5" />

    <EditText
        android:id="@+id/etHome7Age"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/age"
        android:inputType="numberDecimal"
        style="@style/Home7text"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etHome7SurName"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5" />

    <EditText
        android:id="@+id/etHome7isDegree"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/isdegree"
        android:inputType="text"
        style="@style/Home7text"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etHome7Age"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5" />
    <Button
        android:text="@string/save_data"
        android:layout_width="wrap_content"
        android:onClick="saveData"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dp40"
        app:layout_constraintTop_toBottomOf="@id/etHome7photo"
        />


</android.support.constraint.ConstraintLayout>