<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".homeworks.homework1.Home1Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ff3c44"
            android:text="@string/red"
            android:textSize="30sp"
            android:layout_margin="6dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#3ca1ff"
            android:text="@string/blue"
            android:textSize="30sp"
            android:layout_margin="6dp"
            android:gravity="center"/>
    </LinearLayout>

    <Button
        android:id="@+id/btChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClicks"
        android:text="@string/change"
        android:textSize="30sp" />

</LinearLayout>