<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_main"
    tools:context=".classwork.classwork2.Classwork2MainAct">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_wc_black_24dp"
        android:tint="@color/logo_color_selector"
        android:layout_marginTop="@dimen/dp40"
        android:onClick="loggoClick"
        android:layout_gravity="center"/>
    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_input_name"
        android:hint="@string/username"
        android:layout_marginTop="@dimen/dp40"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:drawablePadding="20dp"

        android:gravity="center_vertical"
        android:drawableStart="@drawable/ic_input_name" />
    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_input_password"
        android:hint="@string/username"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:drawableStart="@drawable/ic_input_password" />

    <Button
        android:id="@+id/btLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/log_in"
        android:gravity="center"
        android:textSize="30sp"
        android:background="@drawable/logging_button_selector"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/forgot_your_username_password"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        />

    <Button
        android:id="@+id/btCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_acount"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/orange"
        android:layout_marginBottom="20dp"

        />
</LinearLayout>