<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homeworks.homework4.Home4SecondActivity">
    <Button
        android:id="@+id/btHome4StartAnim"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".34"
        android:onClick="sovaControl"/>
    <Button
        android:id="@+id/btHome4StopAnim"
        android:text="@string/stop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".34"
        android:onClick="sovaControl"
        />
    <Button
        android:id="@+id/btHome4toCircle"
        android:text="@string/diagramma"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="@id/btHome4StopAnim"
        app:layout_constraintLeft_toLeftOf="@id/btHome4StartAnim"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".34"
        android:onClick="sovaControl"
        />
    <ImageView
        android:id="@+id/imgHome4sova"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btHome4StartAnim"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".9"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="1"
        />

</android.support.constraint.ConstraintLayout>